# pdm-backend

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  netlify.toml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  release.yml
docs/: api.md  build_config.md  hooks.md  index.md  metadata.md  migration.md
news/: 105.bugfix.md  106.bugfix.md  107.bugfix.md  109.bugfix.md  11.bugfix.md  112.feature.md  114.bugfix.md  12.bugfix.md  120.bugfix.md  127.bugfix.md  13.dep.md  132.bugfix.md  14.feature.md  141.bugfix.md  143.feature.md  146.dep.md  149.feature.md  15.feature.md  16.feature.0.md  16.feature.1.md  165.bugfix.md  17.bugfix.md  19.dep.md  20.feature.md  23.feature.md  25.misc.md  27.misc.md  28.bugfix.md  29.bugfix.md  33.feature.md  4.bugfix  4.feature  40.bugfix.md  41.feature.md  43.feature.md  45.bugfix.md  5.feature  52.dep.md  53.feature.md  6.feature  (+28 more)
pdm/pep517/: __init__.py  api.py  base.py  editable.py  exceptions.py  legacy.py  license.py  macosx_platform.py  metadata.py  requirements.py  scm.py  sdist.py  utils.py  validator.py  version.py  versions.py  wheel.py
pdm/pep517/_vendor/: pyparsing.py  vendor.txt
pdm/pep517/_vendor/boolean/: __init__.py
pdm/pep517/_vendor/cerberus/: __init__.py  errors.py  schema.py  utils.py  validator.py
pdm/pep517/_vendor/cerberus/benchmarks/: test_overall_performance_1.py  test_overall_performance_2.py
pdm/pep517/_vendor/license_expression/: __init__.py  _pyahocorasick.py  apache-2.0.LICENSE
pdm/pep517/_vendor/license_expression/data/: license_key_index.json.ABOUT  scancode-licensedb-index.json
pdm/pep517/_vendor/packaging/: markers.py  requirements.py  specifiers.py  version.py
pdm/pep517/_vendor/pyparsing/: __init__.py  core.py
pdm/pep517/_vendor/pyparsing/diagram/: __init__.py
pdm/pep517/_vendor/toml/: __init__.py  decoder.py  encoder.py  ordered.py
pdm/pep517/_vendor/tomli_w/: __init__.py
pdm/pep517/setuptools/: __init__.py  editable.py
scripts/: build.py  fetch_python_versions.py  release.py
scripts/patches/: cerberus-patch-version.patch  cerberus-remove-pkg-resources.patch  pyproject-metadata-import.patch  pyproject_metadata.patch
src/pdm/backend/: __init__.py  api.py  base.py  config.py  editable.py  exceptions.py  hooks.py  intree.py  macosx_platform.py  sdist.py  structures.py  utils.py  wheel.py
src/pdm/backend/_vendor/: vendor.txt
src/pdm/backend/_vendor/editables/: LICENSE.txt  __init__.py  redirector.py
src/pdm/backend/_vendor/packaging/: markers.py  metadata.py  requirements.py  specifiers.py  version.py
src/pdm/backend/_vendor/pyparsing/: __init__.py  core.py
src/pdm/backend/_vendor/pyparsing/diagram/: __init__.py
src/pdm/backend/_vendor/pyproject_metadata/: __init__.py  errors.py  pyproject.py
src/pdm/backend/_vendor/tomli_w/: __init__.py
src/pdm/backend/_vendor/validate_pyproject/: cli.py  formats.py
src/pdm/backend/hooks/: __init__.py  base.py  setuptools.py
src/pdm/backend/hooks/version/: __init__.py  scm.py
src/pdm/backend/versioning/: dynamic.py  scm.py
tests/: conftest.py  test_api.py  test_file_finder.py  test_hooks.py  test_metadata.py  test_requirements.py  test_setuptools.py  test_utils.py  test_validator.py  test_wheel.py  testutils.py
tests/fixtures/hooks/: hook_class.py  hook_module.py  local_hook.py
tests/fixtures/projects/demo-cextension/: build.py  pdm_build.py  pyproject.toml
tests/fixtures/projects/demo-cextension-in-src/: build.py  pdm_build.py  pyproject.toml
tests/fixtures/projects/demo-cextension-in-src/src/my_package/: hellomodule.c
tests/fixtures/projects/demo-cextension/my_package/: hellomodule.c
tests/fixtures/projects/demo-combined-extras/: pyproject.toml
tests/fixtures/projects/demo-explicit-package-dir/: pyproject.toml
tests/fixtures/projects/demo-legacy/: pyproject.toml
tests/fixtures/projects/demo-licenses/: pyproject.toml
tests/fixtures/projects/demo-metadata-test/: pyproject.toml
tests/fixtures/projects/demo-module/: foo_module.py  pyproject.toml
tests/fixtures/projects/demo-no-license/: pyproject.toml
tests/fixtures/projects/demo-no-name-nor-version/: pyproject.toml
tests/fixtures/projects/demo-no-version/: pyproject.toml
tests/fixtures/projects/demo-package/: pyproject.toml
tests/fixtures/projects/demo-package-include/: pyproject.toml
tests/fixtures/projects/demo-package-include-error/: pyproject.toml
tests/fixtures/projects/demo-package-include-old/: pyproject.toml
tests/fixtures/projects/demo-package-setuptools/: pyproject.toml  setup.py
tests/fixtures/projects/demo-package-stubs/: README.md  pyproject.toml
tests/fixtures/projects/demo-package-stubs/src/my_package-stubs/: __init__.pyi
tests/fixtures/projects/demo-package-with-deep-path/: pyproject.toml
tests/fixtures/projects/demo-package-with-tests/: pyproject.toml
tests/fixtures/projects/demo-pep420-package/: pyproject.toml
tests/fixtures/projects/demo-purelib-with-build/: build.py  my_build.py  pyproject.toml
tests/fixtures/projects/demo-reuse-spec/: pyproject.toml
tests/fixtures/projects/demo-reuse-spec/LICENSES/: MPL-2.0.txt
tests/fixtures/projects/demo-src-package/: pyproject.toml
tests/fixtures/projects/demo-src-package-include/: pyproject.toml
tests/fixtures/projects/demo-src-pymodule/: pyproject.toml
tests/fixtures/projects/demo-using-scm/: .gitignore  pyproject.toml  version.py
tests/pdm/backend/hooks/version/: test_scm.py
