[project]
# PEP 621 project metadata
# https://www.python.org/dev/peps/pep-0621
name = "pdm-backend"
description = "The build backend used by PDM that supports latest packaging standards"
authors = [
  {name = "Frost Ming", email = "mianghong@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.7"
readme = "README.md"
keywords = ["packaging", "PEP 517", "build"]
dynamic = ["version"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = ["importlib-metadata>=3.6; python_version < \"3.10\""]

[project.urls]
homepage = "https://pdm.fming.dev"
repository = "https://github.com/pdm-project/pdm-pep517"

[tool.pdm]
version = {source = "file", path = "src/pdm/backend/__init__.py"}

[tool.pdm.build]
includes = ["src"]
package-dir = "src"
source-includes = ["tests"]

[tool.pdm.dev-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "towncrier",
    "pytest-xdist",
    "vendoring; python_version ~= '3.8'",
    "parver~=0.3",
    "setuptools",
]

[tool.pdm.scripts]
build = "python scripts/build.py"
release = "python scripts/release.py"

[build-system]
requires = []
build-backend = "pdm.backend.api"
backend-path = ["src"]

[tool.black]
line-length = 88
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | build
  | dist
  | __pypackages__
  | pdm/pep517/_vendor
)/
'''

[tool.vendoring]
destination = "src/pdm/backend/_vendor/"
requirements = "src/pdm/backend/_vendor/vendor.txt"
namespace = "pdm.backend._vendor"
patches-dir = "scripts/patches"
protected-files = ["__init__.py", "README.md", "vendor.txt"]

[tool.vendoring.transformations]
substitute = []
drop = [
    "bin/",
    "*.so",
    "typing.*",
    "*/tests/",
    "**/test_*.py",
    "**/*_test.py"
]

[tool.vendoring.typing-stubs]

[tool.vendoring.license.directories]

[tool.vendoring.license.fallback-urls]

[tool.towncrier]
package = "pdm"
filename = "CHANGELOG.md"
issue_format = "[#{issue}](https://github.com/pdm-project/pdm-pep517/issues/{issue})"
directory = "news/"
template = "news/towncrier_template.md"
underlines = "-~^"

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features & Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "doc"
  name = "Improved Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "dep"
  name = "Dependencies"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "removal"
  name = "Removals and Deprecations"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "misc"
  name = "Miscellany"
  showcontent = true

[tool.pytest.ini_options]
norecursedirs = ["fixtures", "__pypackages__"]
markers = [
    "deprecation: Test old features are deprecated",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::RuntimeWarning"
]
