[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm]
author = "frostming <mianghong@gmail.com>"
version = { from = "my_package/__init__.py" }
python_requires = ">=3.5"
license = "MIT"
description = ""
name = "demo-legacy"
readme = "README.md"
homepage = ""

[tool.pdm.dependencies]
flask = "*"

[tool.pdm.dev-dependencies]

[[tool.pdm.source]]
url = "https://test.pypi.org/simple"
verify_ssl = true
name = "testpypi"
