[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
authors = [
    {name = "frostming", email = "mianghong@gmail.com"},
]
dynamic = ["version"]
version = { from = "foo_module.py" }
requires-python = ">=3.5"
license = {text = "MIT"}
dependencies = []
description = ""
name = "demo-module"
readme = "README.md"

[project.urls]
homepage = ""

[project.optional-dependencies]
