[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "frostming", email = "mianghong@gmail.com"},
]
dynamic = ["version"]
requires-python = ">=3.5"
license = {text = "MIT"}
dependencies = []
description = ""
name = "demo-module"
readme = "README.md"

[project.optional-dependencies]

[tool.pdm]
version = {source = "file", path = "src/foo_module.py" }
