[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
authors = [
    {name = "frostming", email = "mianghong@gmail.com"},
]
name = "demo"
requires-python = ">=3.5"
license = {text = "MIT"}
dependencies = []
description = ""
readme = "README.md"

[project.optional-dependencies]
