[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
authors = [
    {name = "frostming", email = "mianghong@gmail.com"},
]
dynamic = ["version"]
version = { from = "my_package/__init__.py" }
requires-python = ">=3.5"
license = {text = "MIT"}
dependencies = ["flask"]
dev-dependencies = []
description = ""
name = "demo-package"
readme = "README.md"
includes = [
    "my_package/",
    "single_module.py",
    "data_out.json",
]
excludes = [
    "my_package/*.json"
]

[project.urls]
homepage = ""

[project.optional-dependencies]
