[build-system]
build-backend = "pdm.builders.api"
requires = ["pdm"]

[tool]
[tool.pdm]
author = "frostming <mianghong@gmail.com>"
description = ""
homepage = ""
license = "MIT"
name = "demo-package"
python_requires = ">=3.5"
version = { from = "my_package/__init__.py" }
readme = "README.md"

includes = [
    "my_package/",
    "requirements.txt",
    "data_out.json",
]
excludes = [
    "my_package/*.json"
]

[tool.pdm.dependencies]
flask = "*"

[tool.pdm.dev-dependencies]
