[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "frostming", email = "mianghong@gmail.com"},
]
dynamic = ["version"]
requires-python = ">=3.5"
license = {text = "MIT"}
dependencies = ["flask"]
description = ""
name = "demo-package"
readme = "README.md"

[project.optional-dependencies]

[tool.pdm]
version = {source = "file", path = "my_package/__init__.py" }

[tool.pdm.build]
includes = [
    "my_package/",
    "requirements.txt",
    "data_out.json",
]
excludes = [
    "my_package/*.json"
]
