[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
authors = [
    {name = "frostming", email = "mianghong@gmail.com"},
]
dynamic = ["version"]
requires-python = ">=3.5"
license = {text = "MIT"}
dependencies = ["flask"]
description = ""
name = "demo-package"
readme = "README.md"

[project.urls]
homepage = ""

[project.optional-dependencies]

[tool.pdm]
version = { from = "my_package/__init__.py" }
source-includes = ["my_package/**/*.json"]

[[tool.pdm.source]]
url = "https://test.pypi.org/simple"
verify_ssl = true
name = "testpypi"
