[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
authors = [
    {name = "frostming", email = "mianghong@gmail.com"},
]
dynamic = ["version"]
requires-python = ">=3.5"
license-expression = "MIT"
dependencies = []
description = ""
name = "demo-package"

[project.urls]
homepage = ""

[project.optional-dependencies]

[tool.pdm]
version = { from = "foo/my_package/__init__.py" }
includes = ["foo/"]
editable-backend = "editables"
