[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
authors = [
    {name = "frostming", email = "mianghong@gmail.com"},
]
dynamic = ["version"]
version = { from = "sub/my_package/__init__.py" }
requires-python = ">=3.5"
license = {text = "MIT"}
dependencies = []
description = ""
name = "demo-package"

[project.urls]
homepage = ""

[project.optional-dependencies]

[tool.pdm]
includes = ["sub"]
