[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "frostming", email = "mianghong@gmail.com"},
]
dynamic = ["version"]
requires-python = ">=3.5"
license = {text = "MIT"}
dependencies = []
description = ""
name = "demo-package"

[project.optional-dependencies]

[tool.pdm]
version = {source = "file", path = "sub/my_package/__init__.py" }

[tool.pdm.build]
includes = ["sub", "data_out.json"]
package-dir = "sub"
editable-backend = "editables"
