[build-system]
build-backend = "pdm.builders.api"
requires = ["pdm"]

[tool]
[tool.pdm]
author = "frostming <mianghong@gmail.com>"
description = ""
homepage = ""
license = "MIT"
name = "demo-module"
python_requires = ">=3.5"
version = { use_scm = true }
readme = "README.md"

[tool.pdm.dependencies]

[tool.pdm.dev-dependencies]
